Fixed spacing on frontpage for boxes.

--- a/themes/loop/sass/theme/_mixins.scss
+++ b/themes/loop/sass/theme/_mixins.scss
@@ -80,3 +80,14 @@
     }
   }
 }
+
+@mixin word-wrap() {
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+  overflow-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  word-wrap: break-word;
+}
